@@ -203,7 +203,7 @@ void jp2_setup_decoder(opj_jp2_t *jp2, struct opj_dparameters *parameters);
  * @param cstr_info Codestream information structure if required, NULL otherwise
  * @return Returns a decoded image if successful, returns NULL otherwise
 */
-struct opj_image* jp2_decode(opj_jp2_t *jp2, struct opj_stream_private *cio, struct opj_event_mgr * p_manager);
+struct opj_image* opj_jp2_decode(opj_jp2_t *jp2, struct opj_stream_private *cio, struct opj_event_mgr * p_manager);
 /**
 Setup the encoder parameters using the current image and using user parameters. 
 Coding parameters are returned in jp2->j2k->cp. 
@@ -237,7 +237,7 @@ Encode an image into a JPEG-2000 file stream
 @param cstr_info Codestream information structure if required, NULL otherwise
 @return Returns true if successful, returns false otherwise
 */
-bool jp2_encode(opj_jp2_t *jp2, struct opj_stream_private *cio, struct opj_event_mgr * p_manager);
+bool opj_jp2_encode(opj_jp2_t *jp2, struct opj_stream_private *cio, struct opj_event_mgr * p_manager);
 
 /**
  * Reads a jpeg2000 file header structure.
@@ -286,7 +286,7 @@ bool jp2_write_tile (
  * @param	p_stream			the stream to write data to.
  * @param	p_manager	the user event manager.
  */
-bool jp2_decode_tile (
+bool opj_jp2_decode_tile (
 					opj_jp2_t * p_jp2,
 					OPJ_UINT32 p_tile_index,
 					OPJ_BYTE * p_data,
